feat: initial commit for responsive gym landing page
feat: initial commit for responsive gym landing page

feat: initial commit for responsive gym landing page

--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
     <p>あなたの理想のカラダを、プロが全力サポート。</p>
     <a href="#" class="cta-button">無料体験に申し込む</a>
     <br />
-    <img src="dummySource/1200x675.png" alt="ジムイメージ" />
+    <img src="./dummySource/1200x675.png" alt="ジムイメージ" />
   </section>
 
   <!-- サービス紹介 -->
   <section class="service">
     <h2>サービス紹介</h2>
     <div class="service-item">
-      <img src="dummySource/600x400.png" alt="サービスイメージ" />
+      <img src="./dummySource/600x400.png" alt="サービスイメージ" />
       <h3>パーソナルトレーニング</h3>
       <p>一人ひとりに合わせたメニューで、理想の体型を目指します。</p>
     </div>
     <div class="service-item">
-      <img src="dummySource/600x400.png" alt="サービスイメージ" />
+      <img src="./dummySource/600x400.png" alt="サービスイメージ" />
       <h3>食事指導</h3>
       <p>栄養士による食事プランで、内側からサポートします。</p>
     </div>
     <div class="service-item">
-      <img src="dummySource/600x400.png" alt="サービスイメージ" />
+      <img src="./dummySource/600x400.png" alt="サービスイメージ" />
       <h3>オンラインサポート</h3>
       <p>いつでもどこでも、トレーナーとつながれます。</p>
     </div>
@@ -43,15 +43,15 @@
   <section class="voice">
     <h2>お客様の声</h2>
     <div class="testimonial">
-      <img src="dummySource/300x300.png" alt="お客様イメージ" />
+      <img src="./dummySource/300x300.png" alt="お客様イメージ" />
       <p>「3ヶ月で-8kg達成！自信がつきました」<br><strong>30代 女性</strong></p>
     </div>
     <div class="testimonial">
-      <img src="dummySource/300x300.png" alt="お客様イメージ" />
+      <img src="./dummySource/300x300.png" alt="お客様イメージ" />
       <p>「通うのが楽しみになるジムです！」<br><strong>20代 男性</strong></p>
     </div>
     <div class="testimonial">
-      <img src="dummySource/300x300.png" alt="お客様イメージ" />
+      <img src="./dummySource/300x300.png" alt="お客様イメージ" />
       <p>「健康診断の結果が改善されました」<br><strong>40代 男性</strong></p>
     </div>
   </section>
