--- a/index.html
+++ b/index.html
@@ -2,152 +2,167 @@
 <html lang="ja">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#e60023" />
-  <meta name="description" content="プロがサポートするパーソナルジム。今なら無料体験受付中。">  
-  <title>無料体験LP（デモ）</title>
-  <link rel="preload" href="style.css" as="style">
-  <link rel="stylesheet" href="style.css" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="theme-color" content="#e60023" />
+	<meta name="description" content="プロがサポートするパーソナルジム。今なら無料体験受付中。">
+	<title>無料体験LP（デモ）</title>
+	<link rel="preload" href="style.css" as="style">
+	<link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <!-- ヒーローセクション -->
-  <section class="hero">
-    <h1>今なら無料体験実施中！</h1>
-    <p>あなたの理想のカラダを、プロが全力サポート。</p>
-    <a href="#form" class="cta-button" role="button">無料体験に申し込む</a>
-    <br />
-    <picture>
-      <source srcset="./dummySource/1200x675.webp" type="image/webp">
-      <img src="./dummySource/1200x675.png" alt="ジムイメージ" width="1200" height="675" />
-    </picture>
-  </section>
+	<!-- ヒーローセクション -->
+	<section class="hero">
+		<h1>今なら無料体験実施中！</h1>
+		<p>あなたの理想のカラダを、プロが全力サポート。</p>
+		<a href="#form" class="cta-button" role="button">無料体験に申し込む</a>
+		<br />
+		<picture>
+			<source srcset="./dummySource/1200x675.webp" type="image/webp">
+			<img src="./dummySource/1200x675.png" alt="ジムの施設の外観" width="1200" height="675" loading="lazy" />
+		</picture>
+	</section>
 
-  <!-- サービス紹介 -->
-  <section class="service">
-    <h2>サービス紹介</h2>
-    <div class="service-item">
-      <picture>
-        <source srcset="./dummySource/600x400.webp" type="image/webp">
-        <img src="./dummySource/600x400.png" alt="サービスイメージ" width="600" height="400" />
-      </picture>
-      <h3>パーソナルトレーニング</h3>
-      <p>一人ひとりに合わせたメニューで、理想の体型を目指します。</p>
-    </div>
-    <div class="service-item">
-      <picture>
-        <source srcset="./dummySource/600x400.webp" type="image/webp">
-        <img src="./dummySource/600x400.png" alt="サービスイメージ" width="600" height="400" />
-      </picture>
-      <h3>食事指導</h3>
-      <p>栄養士による食事プランで、内側からサポートします。</p>
-    </div>
-    <div class="service-item">
-      <picture>
-        <source srcset="./dummySource/600x400.webp" type="image/webp">
-        <img src="./dummySource/600x400.png" alt="サービスイメージ" width="600" height="400" />
-      </picture>
-      <h3>オンラインサポート</h3>
-      <p>いつでもどこでも、トレーナーとつながれます。</p>
-    </div>
-  </section>
+	<!-- サービス紹介 -->
+	<section class="service">
+		<h2>サービス紹介</h2>
+		<div class="service-item">
+			<picture>
+				<source srcset="./dummySource/600x400.webp" type="image/webp">
+				<img src="./dummySource/600x400.png" alt="パーソナルトレーニング中の様子" width="600" height="400" loading="lazy" />
+			</picture>
+			<h3>パーソナルトレーニング</h3>
+			<p>一人ひとりに合わせたメニューで、理想の体型を目指します。</p>
+		</div>
+		<div class="service-item">
+			<picture>
+				<source srcset="./dummySource/600x400.webp" type="image/webp">
+				<img src="./dummySource/600x400.png" alt="栄養指導のイメージ" width="600" height="400" loading="lazy" />
+			</picture>
+			<h3>食事指導</h3>
+			<p>栄養士による食事プランで、内側からサポートします。</p>
+		</div>
+		<div class="service-item">
+			<picture>
+				<source srcset="./dummySource/600x400.webp" type="image/webp">
+				<img src="./dummySource/600x400.png" alt="オンラインでのトレーニング相談" width="600" height="400" loading="lazy" />
+			</picture>
+			<h3>オンラインサポート</h3>
+			<p>いつでもどこでも、トレーナーとつながれます。</p>
+		</div>
+	</section>
 
-  <!-- お客様の声 -->
-  <section class="voice">
-    <h2>お客様の声</h2>
-    <div class="testimonial">
-      <picture>
-        <source srcset="./dummySource/300x300.webp" type="image/webp">
-        <img src="./dummySource/300x300.png" alt="お客様イメージ" width="300" height="300" />
-      </picture>
-      <p>「3ヶ月で-8kg達成！自信がつきました」<br><strong>30代 女性</strong></p>
-    </div>
-    <div class="testimonial">
-      <picture>
-        <source srcset="./dummySource/300x300.webp" type="image/webp">
-        <img src="./dummySource/300x300.png" alt="お客様イメージ" width="300" height="300" />
-      </picture>
-      <p>「通うのが楽しみになるジムです！」<br><strong>20代 男性</strong></p>
-    </div>
-    <div class="testimonial">
-      <picture>
-        <source srcset="./dummySource/300x300.webp" type="image/webp">
-        <img src="./dummySource/300x300.png" alt="お客様イメージ" width="300" height="300" />
-      </picture>
-      <p>「健康診断の結果が改善されました」<br><strong>40代 男性</strong></p>
-    </div>
-  </section>
+	<!-- お客様の声 -->
+	<section class="voice">
+		<h2>お客様の声</h2>
+		<div class="testimonial">
+			<picture>
+				<source srcset="./dummySource/300x300.webp" type="image/webp">
+				<img src="./dummySource/300x300.png" alt="30代女性のお客様の写真" width="300" height="300" loading="lazy" />
+			</picture>
+			<p>「3ヶ月で-8kg達成！自信がつきました」<br><strong>30代 女性</strong></p>
+		</div>
+		<div class="testimonial">
+			<picture>
+				<source srcset="./dummySource/300x300.webp" type="image/webp">
+				<img src="./dummySource/300x300.png" alt="20代男性のお客様の写真" width="300" height="300" loading="lazy" />
+			</picture>
+			<p>「通うのが楽しみになるジムです！」<br><strong>20代 男性</strong></p>
+		</div>
+		<div class="testimonial">
+			<picture>
+				<source srcset="./dummySource/300x300.webp" type="image/webp">
+				<img src="./dummySource/300x300.png" alt="40代男性のお客様の写真" width="300" height="300" loading="lazy" />
+			</picture>
+			<p>「健康診断の結果が改善されました」<br><strong>40代 男性</strong></p>
+		</div>
+	</section>
+	<!-- 料金表 -->
+	<section class="pricing">
+		<h2>料金表</h2>
+		<table>
+			<tr>
+				<th>プラン名</th>
+				<th>料金</th>
+				<th>内容</th>
+			</tr>
+			<tr>
+				<td>ライトプラン</td>
+				<td>¥8,000/月</td>
+				<td>月4回セッション</td>
+			</tr>
+			<tr>
+				<td>スタンダード</td>
+				<td>¥15,000/月</td>
+				<td>月8回＋食事指導</td>
+			</tr>
+			<tr>
+				<td>プレミアム</td>
+				<td>¥25,000/月</td>
+				<td>通い放題＋フルサポート</td>
+			</tr>
+		</table>
+	</section>
 
-  <!-- 料金表 -->
-  <section class="pricing">
-    <h2>料金表</h2>
-    <table>
-      <tr><th>プラン名</th><th>料金</th><th>内容</th></tr>
-      <tr><td>ライトプラン</td><td>¥8,000/月</td><td>月4回セッション</td></tr>
-      <tr><td>スタンダード</td><td>¥15,000/月</td><td>月8回＋食事指導</td></tr>
-      <tr><td>プレミアム</td><td>¥25,000/月</td><td>通い放題＋フルサポート</td></tr>
-    </table>
-  </section>
+	<!-- 申込フォーム -->
+	<section class="form" id="form">
+		<h2>無料体験申込フォーム</h2>
+		<form>
+			<label for="name">お名前</label>
+			<input type="text" id="name" name="name" required />
+			<label for="email">メールアドレス</label>
+			<input type="email" id="email" name="email" required />
+			<label for="message">ご希望・ご相談内容</label>
+			<textarea id="message" name="message" rows="4"></textarea>
+			<button type="submit">送信する</button>
+		</form>
+	</section>
 
-  <!-- 申込フォーム -->
-  <section class="form" id="form">
-    <h2>無料体験申込フォーム</h2>
-    <form>
-      <label for="name">お名前</label>
-      <input type="text" id="name" name="name" required />
-      <label for="email">メールアドレス</label>
-      <input type="email" id="email" name="email" required />
-      <label for="message">ご希望・ご相談内容</label>
-      <textarea id="message" name="message" rows="4"></textarea>
-      <button type="submit">送信する</button>
-    </form>
-  </section>
+	<!-- アクセス -->
+	<section class="access">
+		<h2>アクセス情報</h2>
+		<p>〒123-4567 東京都〇〇区〇〇1-2-3 パーソナルジムSEEK</p>
+		<p>最寄り駅：〇〇駅から徒歩5分</p>
+		<div class="map">
+			<button id="loadMap" aria-label="地図を読み込む">地図を表示</button>
+			<div id="mapContainer"></div>
+		</div>
+	</section>
 
-  <!-- アクセス -->
-  <section class="access">
-    <h2>アクセス情報</h2>
-    <p>〒123-4567 東京都〇〇区〇〇1-2-3 パーソナルジムSEEK</p>
-    <p>最寄り駅：〇〇駅から徒歩5分</p>
-    <div class="map">
-      <button id="loadMap" aria-label="地図を読み込む">地図を表示</button>
-      <div id="mapContainer"></div>
-    </div>
-  </section>
+	<!-- Q&A -->
+	<section class="faq">
+		<h2>よくある質問</h2>
+		<div class="qa">
+			<div class="qa-item">
+				<h3>Q. 本当に無料ですか？</h3>
+				<p>A. はい、初回体験は完全無料でご利用いただけます。</p>
+			</div>
+			<div class="qa-item">
+				<h3>Q. 持ち物は何が必要ですか？</h3>
+				<p>A. 動きやすい服装・タオル・飲み物をご用意ください。</p>
+			</div>
+			<div class="qa-item">
+				<h3>Q. 予約の変更は可能ですか？</h3>
+				<p>A. 予約日前日までにご連絡いただければ変更可能です。</p>
+			</div>
+		</div>
+	</section>
 
-  <!-- Q&A -->
-  <section class="faq">
-    <h2>よくある質問</h2>
-    <div class="qa">
-      <div class="qa-item">
-        <h3>Q. 本当に無料ですか？</h3>
-        <p>A. はい、初回体験は完全無料でご利用いただけます。</p>
-      </div>
-      <div class="qa-item">
-        <h3>Q. 持ち物は何が必要ですか？</h3>
-        <p>A. 動きやすい服装・タオル・飲み物をご用意ください。</p>
-      </div>
-      <div class="qa-item">
-        <h3>Q. 予約の変更は可能ですか？</h3>
-        <p>A. 予約日前日までにご連絡いただければ変更可能です。</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- JS読込 -->
-  <script src="script.js" defer></script>
-  <script>
-    document.getElementById("loadMap").addEventListener("click", function () {
-      const container = document.getElementById("mapContainer");
-      if (!container.querySelector("iframe")) {
-        container.innerHTML = `<iframe
+	<!-- JS読込 -->
+	<script src="script.js" defer></script>
+	<script>
+		document.getElementById("loadMap").addEventListener("click", function () {
+			const container = document.getElementById("mapContainer");
+			if (!container.querySelector("iframe")) {
+				container.innerHTML = `<iframe
           src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.490662496779!2d139.76454931525865!3d35.68123698019392!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188bfa7c0730fb%3A0x44cd37f84962fc0!5e0!3m2!1sja!2sjp!4v1681212032671!5m2!1sja!2sjp'
           width='100%' height='300' title='パーソナルジムの地図'
           style='border:0;' allowfullscreen='' loading='lazy'
           referrerpolicy='no-referrer-when-downgrade'></iframe>`;
-      }
-    });
-  </script>
+			}
+		});
+	</script>
 </body>
 
 </html>
